# ChangeLog for games-arcade/openalchemist
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  15 Oct 2008; Mounir Lamouri (volkmar) <mounir.lamouri@gmail.com>
  +openalchemist-0.3.ebuild, +files/openalchemist-0.3-gentoo.patch,
  +metadata.xml:
  New Ebuild for bug 241846. Original ebuild from Ludovic Fauvet
  <etix@l0cal.com>.
