@@ -1,5 +1,5 @@
 AUX openalchemist-0.3-gentoo.patch 502 RMD160 20ebc1185123464e21195023334ff66ac7168345 SHA1 83568d9bb26a9c8898369ff4a56c0d73f533389c SHA256 a466e782cb7470a87de5a1307e3f2553b13533e503b04f78e76df39e927088f8
 DIST openalchemist-0.3-src.tar.gz 5936792 RMD160 8cfa22c0907219c7cf330bc55b79fc138ef48559 SHA1 d496f2e37f2c468cef3055dec4a39426c6758d27 SHA256 6f869ba8424f1f861a021b595c2b78b6e5740f56758f19b00f3bc7dc9105cc89
-EBUILD openalchemist-0.3.ebuild 1131 RMD160 9d0004e77ab69506975df9a2c6d42fe4ca7007b2 SHA1 77ea2cf433f30c11f91e42d723661f50c784ed1e SHA256 9d5ec4ca33611d3385dbc391060e482749eab8db4321c4725677483bc721d51c
-MISC ChangeLog 365 RMD160 f200fe89937b332cde30b7b18b32134355196047 SHA1 8dec42a6be38e5e9b83cdd2fae2a2a21a2a5450c SHA256 422ed0ade9bfaf9a5bc3a94d0779f75bb5ff590108a5a7e9cafdfb6a52dd80f6
+EBUILD openalchemist-0.3.ebuild 959 RMD160 7af93d778edb21557e951acb846855ca911760e0 SHA1 ed67572f274ae0e529310a4dae8483742dfe9a1e SHA256 4e192003c78cadd722e4d78105d703b48e00590ef657f0e964e2aa0267e3695b
+MISC ChangeLog 482 RMD160 f964fe5759bfc34a7a7170d35556e393e81efd44 SHA1 98d0bfa633c9f155b0f22e2c56437b60afeb2c04 SHA256 22cefc8af621c757ff575c69e5843ff8b758d298e5866509099a75074854b333
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
