@@ -1,6 +1,10 @@
 # ChangeLog for games-arcade/openalchemist
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  25 Jan 2009; Mounir Lamouri (volkmar) <mounir.lamouri@gmail.com>
+  openalchemist-0.3.ebuild:
+  Updating to EAPI 2
 
   15 Oct 2008; Mounir Lamouri (volkmar) <mounir.lamouri@gmail.com>
   +openalchemist-0.3.ebuild, +files/openalchemist-0.3-gentoo.patch,
